--- a/public/luminovrym/Style/style.css
+++ b/public/luminovrym/Style/style.css
@@ -23,6 +23,7 @@
     --border: #46a6b4;
     --thumb: #17b5ce;
     --bg-thumb: #277d8a;
+    --percent : #27345c;
 }
 
 .dark-theme{
@@ -39,6 +40,7 @@
     --border: #474747;
     --thumb: #474747;
     --bg-thumb: #838282;
+    --percent: #dbc7c7;
 }
 
 #icon {
@@ -236,7 +238,7 @@ h4, p{
 }
 
 .title h1{
-    color: #f3f3f3;
+    color: var(--service);
     font-size: 2em;
 }
 
@@ -439,4 +441,114 @@ span{
 .active{
     opacity: 0.5;
 }
+
+/* Skill */
+
+.skill{
+    height: 120vh;
+    padding: 60px;
+}
+
+.skill .kl{
+    text-align: center;
+    font-size: 2em;
+    color: var(--service);
+}
+
+.skill p{
+    text-align: center;
+}
+
+.skills-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    margin-top: 150px;
+}
+
+.kiri{
+    width: 40%;
+}
+
+.kanan{
+    width: 40%;
+}
+
+.bars-box {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0;
+    margin-bottom: 1rem;
+}
+
+.bars-box h3,
+.persentase {
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: var(--service);
+}
+
+.light-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.5rem;
+    background: var(--percent);
+    border-radius: 0.5rem;
+}
+.percent-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 0.5rem;
+    background: var(--thumb);
+    border-radius: 0.5rem;
+}
+.html-bar {
+    width: 90%;
+}
+.css-bar {
+    width: 90%;
+}
+.js-bar {
+    width: 75%;
+}
+.git-bar {
+    width: 90%;
+}
+
+.uiux-bar{
+    width: 80%;
+}
+
+.node-bar{
+    width: 45%;
+}
+
+.php-bar{
+    width: 75%;
+}
+
+.sql-bar{
+    width: 75%;
+}
+
+.laravel-bar{
+    width: 68%;
+}
+
+.api-bar{
+    width: 85%;
+}
+
+.bb{
+    text-align: center;
+    margin-bottom: 50px;
+    color: var(--thumb);
+    font-size: 1.5em;
+}
+
 
